@startuml ConfigLoader
allowmixing

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 30

title Diagram Kelas ConfigLoader

class ConfigLoader {
    - configDir : string
    __
    + ConfigLoader(configDir : string)
    + loadGameConfig() : GameConfig
    + buildBoard(properties : vector<Property*>, config : const GameConfig&) : Board*
    + buildDynamicBoard(filename : string, properties : vector<Property*>, config : const GameConfig&) : Board*
    + buildDecks() : tuple<CardDeck<ChanceCard>*, CardDeck<CommunityChestCard>*, CardDeck<SkillCard>*>
    __
    - loadProperties(filename : string) : vector<Property*>
    - loadRailroadRents(filename : string) : map<int, int>
    - loadUtilityMultipliers(filename : string) : map<int, int>
    - loadTaxConfig(filename : string) : TaxConfig
    - loadSpecialConfig(filename : string) : SpecialConfig
    - loadMiscConfig(filename : string) : MiscConfig
    - createStreetProperty(tokens : vector<string>) : StreetProperty*
    - createRailroadProperty(tokens : vector<string>, rentTable : const map<int, int>&) : RailroadProperty*
    - createUtilityProperty(tokens : vector<string>, multiplierTable : const map<int, int>&) : UtilityProperty*
    - createStandardBoard(properties : vector<Property*>, config : const GameConfig&) : Board*
    - createTileForIndex(index : int, properties : vector<Property*>, config : const GameConfig&) : Tile*
    - buildChanceDeck() : CardDeck<ChanceCard>*
    - buildCommunityChestDeck() : CardDeck<CommunityChestCard>*
    - buildSkillDeck() : CardDeck<SkillCard>*
}

class GameConfig <<struct>> {
    + properties : vector<Property*>
    + railroadRents : map<int, int>
    + utilityMultipliers : map<int, int>
    + tax : TaxConfig
    + special : SpecialConfig
    + misc : MiscConfig
}

class TaxConfig <<struct>> {
    + pphFlat : int
    + pphPercent : int
    + pbmFlat : int
}

class SpecialConfig <<struct>> {
    + goSalary : int
    + jailFine : int
}

class MiscConfig <<struct>> {
    + maxTurn : int
    + initialBalance : int
}

' Relasi
ConfigLoader ..> GameConfig : produces >
GameConfig *-down- TaxConfig
GameConfig *-down- SpecialConfig
GameConfig *-down- MiscConfig

' Model yang dibuat
class Board <<Model>> {
}
class StreetProperty <<Model>> {
}
class RailroadProperty <<Model>> {
}
class UtilityProperty <<Model>> {
}
class "CardDeck<ChanceCard>" as CDChance <<Model>> {
}
class "CardDeck<CommunityChestCard>" as CDComm <<Model>> {
}
class "CardDeck<SkillCard>" as CDSkill <<Model>> {
}

ConfigLoader ..> Board : creates >
ConfigLoader ..> StreetProperty : creates >
ConfigLoader ..> RailroadProperty : creates >
ConfigLoader ..> UtilityProperty : creates >
ConfigLoader ..> CDChance : creates >
ConfigLoader ..> CDComm : creates >
ConfigLoader ..> CDSkill : creates >

' File eksternal
node "File System" as FS {
    file "property.txt" as f1
    file "railroad.txt" as f2
    file "utility.txt" as f3
    file "tax.txt" as f4
    file "special.txt" as f5
    file "misc.txt" as f6
}

ConfigLoader ..> f1 : reads
ConfigLoader ..> f2 : reads
ConfigLoader ..> f3 : reads
ConfigLoader ..> f4 : reads
ConfigLoader ..> f5 : reads
ConfigLoader ..> f6 : reads

note bottom of ConfigLoader
    <b>Factory Pattern</b>
    Satu-satunya kelas yang membaca file konfigurasi.
    Menginstansiasi seluruh objek Model awal
    (Board, Tiles, Properties, CardDecks)
    lalu menyerahkan ke GameEngine.

    <b>Digunakan oleh:</b> GameEngine (saat initNewGame)
end note

@enduml
